src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__prompt_input__prompt_input_launch_options_default.snap
---
source: src/tui/snapshot_tests/prompt_input.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════[ Compose Prompt ]════════════════════════════════════════╗"
"║Type your prompt here...                                                                          ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
"╔═══════════════════════════════════════[ Attachments (0) ]════════════════════════════════════════╗"
"║  (no images attached)                                                                            ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"║                                                                                                  ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
"Options:                                                                                            "
"   Produce PR — session ends when a linked PR is created                                           "
"   Interaction — chat with the agent; session stays alive                                          "
"[Enter] Submit  [Ctrl+J] New line  [↑/↓] History  [Ctrl+V] Paste  [Tab] Switch  [Esc] Cancel        "
